// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders C# version of S3457 (using GH for issues instead of Jira) 1`] = `
<DocumentFragment>
  <div>
    <div
      class="makeStyles-ruleBar-23"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg"
      >
        <h2
          class="MuiTypography-root makeStyles-ruleid-24 MuiTypography-h2"
        >
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineNone makeStyles-ruleidLink-25 MuiTypography-colorPrimary"
            href="/S3457"
          >
            S3457
          </a>
        </h2>
        <h4
          class="MuiTypography-root makeStyles-ruleid-24 MuiTypography-h4"
        />
        <div
          class="MuiTabs-root makeStyles-tabRoot-29"
        >
          <div
            class="MuiTabs-scrollable"
            style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
          />
          <div
            class="MuiTabs-scroller makeStyles-tabScroller-30 MuiTabs-scrollable"
            style="margin-bottom: 0px;"
          >
            <div
              class="MuiTabs-flexContainer"
              role="tablist"
            >
              <button
                aria-selected="false"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary makeStyles-tab-32 makeStyles-targetedTab-34"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <span
                  class="MuiTab-wrapper"
                >
                  cfamily
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
              <button
                aria-selected="true"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary makeStyles-tab-32 makeStyles-coveredTab-33 Mui-selected"
                role="tab"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiTab-wrapper"
                >
                  csharp
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
              <button
                aria-selected="false"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary makeStyles-tab-32 makeStyles-closedTab-36"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <span
                  class="MuiTab-wrapper"
                >
                  java
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
              <button
                aria-selected="false"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary makeStyles-tab-32 makeStyles-targetedTab-34"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <span
                  class="MuiTab-wrapper"
                >
                  python
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <span
              class="PrivateTabIndicator-root-41 PrivateTabIndicator-colorPrimary-42 MuiTabs-indicator"
              style="left: 0px; width: 0px;"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiContainer-root MuiContainer-maxWidthMd"
    >
      <h3
        class="MuiTypography-root makeStyles-title-26 MuiTypography-h3"
      >
        Composite format strings should be used correctly
      </h3>
      <div
        class="MuiBox-root MuiBox-root-38 makeStyles-coverage-27"
      >
        <h4
          class="MuiTypography-root MuiTypography-h4"
        >
          Covered Since
        </h4>
        <ul>
          <li>
            CSH: c#1
          </li>
        </ul>
      </div>
      <div
        class="MuiBox-root MuiBox-root-39 makeStyles-coverage-27"
      >
        <h4
          class="MuiTypography-root MuiTypography-h4"
        >
          Related Tickets and Pull Requests
        </h4>
        <ul>
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
            href="https://github.com/SonarSource/rspec/pulls?q=is%3Apr+\\"S3457\\"+OR+\\"RSPEC-3457\\""
          >
            Specification Pull Requests
          </a>
        </ul>
        <ul>
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
            href="https://github.com/SonarSource/sonar-dotnet/pulls?q=is%3Apr+\\"S3457\\"+OR+\\"RSPEC-3457\\""
          >
            Implementation Pull Requests
          </a>
        </ul>
        <ul>
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
            href="https://github.com/SonarSource/sonar-dotnet/issues?q=is%3Aissue+\\"S3457\\"+OR+\\"RSPEC-3457\\""
          >
            Implementation issues on GitHub
          </a>
        </ul>
      </div>
      <div
        class="MuiBox-root MuiBox-root-40"
      >
        <span
          class="MuiTypography-root makeStyles-description-28 MuiTypography-body1"
        >
          <div>
            <div>
              <p>
                Because composite format strings are interpreted at runtime, rather than validated by the compiler, they can contain errors that lead to unexpected
behaviors or runtime errors. This rule statically validates the good behavior of composite formats when calling the methods of

                <code>
                  String.Format
                </code>
                , 
                <code>
                  StringBuilder.AppendFormat
                </code>
                , 
                <code>
                  Console.Write
                </code>
                , 
                <code>
                  Console.WriteLine
                </code>
                ,

                <code>
                  TextWriter.Write
                </code>
                , 
                <code>
                  TextWriter.WriteLine
                </code>
                , 
                <code>
                  Debug.WriteLine(String, Object[])
                </code>
                ,

                <code>
                  Trace.TraceError(String, Object[])
                </code>
                , 
                <code>
                  Trace.TraceInformation(String, Object[])
                </code>
                ,

                <code>
                  Trace.TraceWarning(String, Object[])
                </code>
                 and 
                <code>
                  TraceSource.TraceInformation(String, Object[])
                </code>
                . 
              </p>
              

              <h2>
                Noncompliant Code Example
              </h2>
              

              <pre>
                s = string.Format("{0}", arg0, arg1); // Noncompliant, arg1 is declared but not used.
s = string.Format("{0} {2}", arg0, arg1, arg2); // Noncompliant, the format item with index 1 is missing so arg1 will not be used.
s = string.Format("foo"); // Noncompliant, there is no need to use string.Format here.

              </pre>
              

              <h2>
                Compliant Solution
              </h2>
              

              <pre>
                s = string.Format("{0}", arg0);
s = string.Format("{0} {1}", arg0, arg2);
s = "foo";

              </pre>
              

              <h2>
                Exceptions
              </h2>
              

              <ul>
                
  
                <li>
                   No issue is raised if the format string is not a 
                  <code>
                    const
                  </code>
                  . 
                </li>
                

              </ul>
              

              <pre>
                var pattern = "{0} {1} {2}";
var res = string.Format(pattern, 1, 2); // Compliant, not const string are not recognized

              </pre>
              

              <ul>
                
  
                <li>
                   No issue is raised if the argument is not an inline creation array. 
                </li>
                

              </ul>
              

              <pre>
                var array = new int[] {};
var res = string.Format("{0} {1}", array); // Compliant we don't know the size of the array

              </pre>
              

              <ul>
                
  
                <li>
                   This rule doesn't check whether the format specifier (defined after the 
                  <code>
                    :
                  </code>
                  ) is actually valid. 
                </li>
                

              </ul>
              

              <h2>
                See
              </h2>
              

              <ul>
                
  
                <li>
                   
                  <a
                    href="https://wiki.sei.cmu.edu/confluence/x/J9YxBQ"
                  >
                    CERT, FIO47-C.
                  </a>
                   - Use valid format strings 
                </li>
                

              </ul>
              


            </div>
            <hr />
            <a
              href="https://github.com/SonarSource/rspec/blob/master/rules/S3457/csharp"
            >
              Edit on Github
            </a>
            <br />
            <hr />
            <pre>
              <code
                class="json hljs"
              >
                {
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "title"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "Composite format strings should be used correctly"
                    </span>
                  </span>
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "type"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "CODE_SMELL"
                    </span>
                  </span>
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "status"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "ready"
                    </span>
                  </span>
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "remediation"
                    </span>
                  </span>
                </span>
                : {
    
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "func"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "Constant/Issue"
                    </span>
                  </span>
                </span>
                ,
    
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "constantCost"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "10min"
                    </span>
                  </span>
                </span>
                
  },
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "tags"
                    </span>
                  </span>
                </span>
                : [
    
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "confusing"
                    </span>
                  </span>
                </span>
                
  ],
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "defaultQualityProfiles"
                    </span>
                  </span>
                </span>
                : [
    
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "Sonar way"
                    </span>
                  </span>
                </span>
                
  ],
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "allKeys"
                    </span>
                  </span>
                </span>
                : [
    
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "S3457"
                    </span>
                  </span>
                </span>
                
  ],
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "branch"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "master"
                    </span>
                  </span>
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "defaultSeverity"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "Major"
                    </span>
                  </span>
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "extra"
                    </span>
                  </span>
                </span>
                : {
    
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "legacyKeys"
                    </span>
                  </span>
                </span>
                : [],
    
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "replacementRules"
                    </span>
                  </span>
                </span>
                : []
  },
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "quickfix"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "unknown"
                    </span>
                  </span>
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "ruleSpecification"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "RSPEC-3457"
                    </span>
                  </span>
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "sqKey"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "S3457"
                    </span>
                  </span>
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "scope"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "All"
                    </span>
                  </span>
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "languages_support"
                    </span>
                  </span>
                </span>
                : [
    {
      
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "name"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "cfamily"
                    </span>
                  </span>
                </span>
                ,
      
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "status"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "ready"
                    </span>
                  </span>
                </span>
                
    },
    {
      
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "name"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "csharp"
                    </span>
                  </span>
                </span>
                ,
      
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "status"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "ready"
                    </span>
                  </span>
                </span>
                
    },
    {
      
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "name"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "java"
                    </span>
                  </span>
                </span>
                ,
      
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "status"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "closed"
                    </span>
                  </span>
                </span>
                
    },
    {
      
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "name"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "python"
                    </span>
                  </span>
                </span>
                ,
      
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "status"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "deprecated"
                    </span>
                  </span>
                </span>
                
    }
  ]
}
              </code>
            </pre>
          </div>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders cfamily version of S1000 1`] = `
<DocumentFragment>
  <div>
    <div
      class="makeStyles-ruleBar-1"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg"
      >
        <h2
          class="MuiTypography-root makeStyles-ruleid-2 MuiTypography-h2"
        >
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineNone makeStyles-ruleidLink-3 MuiTypography-colorPrimary"
            href="/S1000"
          >
            S1000
          </a>
        </h2>
        <h4
          class="MuiTypography-root makeStyles-ruleid-2 MuiTypography-h4"
        />
        <div
          class="MuiTabs-root makeStyles-tabRoot-7"
        >
          <div
            class="MuiTabs-scrollable"
            style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
          />
          <div
            class="MuiTabs-scroller makeStyles-tabScroller-8 MuiTabs-scrollable"
            style="margin-bottom: 0px;"
          >
            <div
              class="MuiTabs-flexContainer"
              role="tablist"
            >
              <button
                aria-selected="true"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary makeStyles-tab-10 makeStyles-targetedTab-12 Mui-selected"
                role="tab"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiTab-wrapper"
                >
                  cfamily
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <span
              class="PrivateTabIndicator-root-19 PrivateTabIndicator-colorPrimary-20 MuiTabs-indicator"
              style="left: 0px; width: 0px;"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiContainer-root MuiContainer-maxWidthMd"
    >
      <h3
        class="MuiTypography-root makeStyles-title-4 MuiTypography-h3"
      >
        Header files should not contain unnamed namespaces
      </h3>
      <div
        class="MuiBox-root MuiBox-root-16 makeStyles-coverage-5"
      >
        <h4
          class="MuiTypography-root MuiTypography-h4"
        >
          Covered Since
        </h4>
        <ul>
          Not Covered
        </ul>
      </div>
      <div
        class="MuiBox-root MuiBox-root-17 makeStyles-coverage-5"
      >
        <h4
          class="MuiTypography-root MuiTypography-h4"
        >
          Related Tickets and Pull Requests
        </h4>
        <ul>
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
            href="https://github.com/SonarSource/rspec/pulls?q=is%3Apr+\\"S1000\\"+OR+\\"RSPEC-1000\\""
          >
            Specification Pull Requests
          </a>
        </ul>
        <ul>
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
            href="https://github.com/SonarSource/sonar-cpp/pulls?q=is%3Apr+\\"S1000\\"+OR+\\"RSPEC-1000\\""
          >
            Implementation Pull Requests
          </a>
        </ul>
        <ul>
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
            href="https://jira.sonarsource.com/issues/?jql=project%20%3D%20CPP%20AND%20(text%20~%20%22S1000%22%20OR%20text%20~%20%22RSPEC-1000%22%20OR%20text%20~%20\\"Header files should not contain unnamed namespaces\\")"
          >
            Implementation tickets on Jira
          </a>
        </ul>
      </div>
      <div
        class="MuiBox-root MuiBox-root-18"
      >
        <span
          class="MuiTypography-root makeStyles-description-6 MuiTypography-body1"
        >
          <div>
            <div>
              <div
                class="paragraph"
              >
                

                <p>
                  An unnamed namespace will be unique within each translation unit. Any declarations appearing in an unnamed namespace in a header will refer to a different entity in each translation unit, which is probably not the expected behavior.
                </p>
                

              </div>
              

              <div
                class="sect1"
              >
                

                <h2
                  id="_noncompliant_code_example"
                >
                  Noncompliant Code Example
                </h2>
                

                <div
                  class="sectionbody"
                >
                  

                  <div
                    class="listingblock"
                  >
                    

                    <div
                      class="content"
                    >
                      

                      <pre>
                        // Header.hpp
namespace                  // Noncompliant
{
  extern int32_t x;
}
                      </pre>
                      

                    </div>
                    

                  </div>
                  

                  <div
                    class="listingblock"
                  >
                    

                    <div
                      class="content"
                    >
                      

                      <pre>
                        // File1.cpp
#include "Header.hpp"

namespace
{
  int32_t x;
}

void fn_a(void)
{
  x = 42;
}
                      </pre>
                      

                    </div>
                    

                  </div>
                  

                  <div
                    class="listingblock"
                  >
                    

                    <div
                      class="content"
                    >
                      

                      <pre>
                        // File2.cpp
#include "Header.hpp"

namespace
{
  int32_t x;  // this is a different x than in File1.cpp
}

void fn_b(void)
{
  fn_a();                  // Is expected to initialize "x" to 42
  if (x == 42)             // But does not, as there are 2 distinct "x" variables
  {
  }
}
                      </pre>
                      

                    </div>
                    

                  </div>
                  

                </div>
                

              </div>
              

              <div
                class="sect1"
              >
                

                <h2
                  id="_see"
                >
                  See
                </h2>
                

                <div
                  class="sectionbody"
                >
                  

                  <div
                    class="ulist"
                  >
                    

                    <ul>
                      

                      <li>
                        

                        <p>
                          MISRA C++:2008, 7-3-3 - There shall be no unnamed namespaces in header files.
                        </p>
                        

                      </li>
                      

                      <li>
                        

                        <p>
                          <a
                            href="https://wiki.sei.cmu.edu/confluence/x/VXs-BQ"
                          >
                            CERT, DCL59-CPP.
                          </a>
                           - Do not define an unnamed namespace in a header file
                        </p>
                        

                      </li>
                      

                    </ul>
                    

                  </div>
                  

                </div>
                

              </div>
              

              <div
                class="sect1"
              >
                

                <h2
                  id="_comments_and_links"
                >
                  Comments And Links
                </h2>
                

                <div
                  class="sectionbody"
                >
                  

                  <div
                    class="paragraph"
                  >
                    

                    <p>
                      (visible only on this page)
                    </p>
                    

                  </div>
                  

                  <div
                    class="sect2"
                  >
                    

                    <h3
                      id="_on_8_feb_2018_004304_thomas_epperson_wrote"
                    >
                      on 8 Feb 2018, 00:43:04 Thomas Epperson wrote:
                    </h3>
                    

                    <div
                      class="paragraph"
                    >
                      

                      <p>
                        The implementation incorrectly flags unnamed namespaces in source files. The specs only refer to unnamed namespaces in HEADER files.
                      </p>
                      

                    </div>
                    

                    <div
                      class="paragraph"
                    >
                      

                      <p>
                        See reported bugs in https://sonarcloud.io/dashboard?id=uglyoldbob_decompiler%3Arestructure
                      </p>
                      

                    </div>
                    

                  </div>
                  

                </div>
                

              </div>
            </div>
            <hr />
            <a
              href="https://github.com/SonarSource/rspec/blob/master/rules/S1000/cfamily"
            >
              Edit on Github
            </a>
            <br />
            <hr />
            <pre>
              <code
                class="json hljs"
              >
                {
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "title"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "Header files should not contain unnamed namespaces"
                    </span>
                  </span>
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "type"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "CODE_SMELL"
                    </span>
                  </span>
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "status"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "ready"
                    </span>
                  </span>
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "quickfix"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "unknown"
                    </span>
                  </span>
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "remediation"
                    </span>
                  </span>
                </span>
                : {
    
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "func"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "Constant/Issue"
                    </span>
                  </span>
                </span>
                ,
    
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "constantCost"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "1h"
                    </span>
                  </span>
                </span>
                
  },
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "tags"
                    </span>
                  </span>
                </span>
                : [
    
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "cert"
                    </span>
                  </span>
                </span>
                ,
    
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "misra-c++2008"
                    </span>
                  </span>
                </span>
                ,
    
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "clumsy"
                    </span>
                  </span>
                </span>
                ,
    
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "pitfall"
                    </span>
                  </span>
                </span>
                
  ],
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "extra"
                    </span>
                  </span>
                </span>
                : {
    
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "legacyKeys"
                    </span>
                  </span>
                </span>
                : [
      
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "UnnamedNamespaceInHeader"
                    </span>
                  </span>
                </span>
                
    ],
    
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "replacementRules"
                    </span>
                  </span>
                </span>
                : []
  },
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "defaultSeverity"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "Major"
                    </span>
                  </span>
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "ruleSpecification"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "RSPEC-1000"
                    </span>
                  </span>
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "sqKey"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "UnnamedNamespaceInHeader"
                    </span>
                  </span>
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "scope"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "Main"
                    </span>
                  </span>
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "securityStandards"
                    </span>
                  </span>
                </span>
                : {
    
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "CERT"
                    </span>
                  </span>
                </span>
                : [
      
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "DCL59-CPP."
                    </span>
                  </span>
                </span>
                
    ]
  },
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "defaultQualityProfiles"
                    </span>
                  </span>
                </span>
                : [
    
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "Sonar way"
                    </span>
                  </span>
                </span>
                ,
    
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "MISRA C++ 2008 recommended"
                    </span>
                  </span>
                </span>
                
  ],
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "languages_support"
                    </span>
                  </span>
                </span>
                : [
    {
      
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "name"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "cfamily"
                    </span>
                  </span>
                </span>
                ,
      
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "status"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "ready"
                    </span>
                  </span>
                </span>
                
    }
  ],
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "allKeys"
                    </span>
                  </span>
                </span>
                : [
    
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "UnnamedNamespaceInHeader"
                    </span>
                  </span>
                </span>
                
  ],
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "branch"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "master"
                    </span>
                  </span>
                </span>
                
}
              </code>
            </pre>
          </div>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders generic version of S3457 1`] = `
<DocumentFragment>
  <div>
    <div
      class="makeStyles-ruleBar-45"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg"
      >
        <h2
          class="MuiTypography-root makeStyles-ruleid-46 MuiTypography-h2"
        >
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineNone makeStyles-ruleidLink-47 MuiTypography-colorPrimary"
            href="/S3457"
          >
            S3457
          </a>
        </h2>
        <h4
          class="MuiTypography-root makeStyles-ruleid-46 MuiTypography-h4"
        />
        <div
          class="MuiTabs-root makeStyles-tabRoot-51"
        >
          <div
            class="MuiTabs-scrollable"
            style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
          />
          <div
            class="MuiTabs-scroller makeStyles-tabScroller-52 MuiTabs-scrollable"
            style="margin-bottom: 0px;"
          >
            <div
              class="MuiTabs-flexContainer"
              role="tablist"
            >
              <button
                aria-selected="false"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary makeStyles-tab-54 makeStyles-targetedTab-56"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <span
                  class="MuiTab-wrapper"
                >
                  cfamily
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
              <button
                aria-selected="false"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary makeStyles-tab-54 makeStyles-coveredTab-55"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <span
                  class="MuiTab-wrapper"
                >
                  csharp
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
              <button
                aria-selected="false"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary makeStyles-tab-54 makeStyles-closedTab-58"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <span
                  class="MuiTab-wrapper"
                >
                  java
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
              <button
                aria-selected="false"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary makeStyles-tab-54 makeStyles-targetedTab-56"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <span
                  class="MuiTab-wrapper"
                >
                  python
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <span
              class="PrivateTabIndicator-root-63 PrivateTabIndicator-colorPrimary-64 MuiTabs-indicator"
              style="left: 0px; width: 0px;"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiContainer-root MuiContainer-maxWidthMd"
    >
      <h3
        class="MuiTypography-root makeStyles-title-48 MuiTypography-h3"
      >
        Composite format strings should be used correctly
      </h3>
      <div
        class="MuiBox-root MuiBox-root-60 makeStyles-coverage-49"
      >
        <h4
          class="MuiTypography-root MuiTypography-h4"
        >
          Covered Since
        </h4>
        <ul>
          <li>
            CSH: c#1
          </li>
        </ul>
      </div>
      <div
        class="MuiBox-root MuiBox-root-61 makeStyles-coverage-49"
      >
        <h4
          class="MuiTypography-root MuiTypography-h4"
        >
          Related Tickets and Pull Requests
        </h4>
        <ul>
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
            href="https://github.com/SonarSource/rspec/pulls?q=is%3Apr+\\"S3457\\"+OR+\\"RSPEC-3457\\""
          >
            Specification Pull Requests
          </a>
        </ul>
        <ul>
          <div>
            Select a language to see the implementation pull requests
          </div>
        </ul>
        <ul>
          <div>
            Select a language to see the implementation tickets
          </div>
        </ul>
      </div>
      <div
        class="MuiBox-root MuiBox-root-62"
      >
        <span
          class="MuiTypography-root makeStyles-description-50 MuiTypography-body1"
        >
          <div>
            <div>
              <p>
                Because composite format strings are interpreted at runtime, rather than validated by the compiler, they can contain errors that lead to unexpected
behaviors or runtime errors. This rule statically validates the good behavior of composite formats when calling the methods of

                <code>
                  String.Format
                </code>
                , 
                <code>
                  StringBuilder.AppendFormat
                </code>
                , 
                <code>
                  Console.Write
                </code>
                , 
                <code>
                  Console.WriteLine
                </code>
                ,

                <code>
                  TextWriter.Write
                </code>
                , 
                <code>
                  TextWriter.WriteLine
                </code>
                , 
                <code>
                  Debug.WriteLine(String, Object[])
                </code>
                ,

                <code>
                  Trace.TraceError(String, Object[])
                </code>
                , 
                <code>
                  Trace.TraceInformation(String, Object[])
                </code>
                ,

                <code>
                  Trace.TraceWarning(String, Object[])
                </code>
                 and 
                <code>
                  TraceSource.TraceInformation(String, Object[])
                </code>
                . 
              </p>
              

              <h2>
                Noncompliant Code Example
              </h2>
              

              <pre>
                s = string.Format("{0}", arg0, arg1); // Noncompliant, arg1 is declared but not used.
s = string.Format("{0} {2}", arg0, arg1, arg2); // Noncompliant, the format item with index 1 is missing so arg1 will not be used.
s = string.Format("foo"); // Noncompliant, there is no need to use string.Format here.

              </pre>
              

              <h2>
                Compliant Solution
              </h2>
              

              <pre>
                s = string.Format("{0}", arg0);
s = string.Format("{0} {1}", arg0, arg2);
s = "foo";

              </pre>
              

              <h2>
                Exceptions
              </h2>
              

              <ul>
                
  
                <li>
                   No issue is raised if the format string is not a 
                  <code>
                    const
                  </code>
                  . 
                </li>
                

              </ul>
              

              <pre>
                var pattern = "{0} {1} {2}";
var res = string.Format(pattern, 1, 2); // Compliant, not const string are not recognized

              </pre>
              

              <ul>
                
  
                <li>
                   No issue is raised if the argument is not an inline creation array. 
                </li>
                

              </ul>
              

              <pre>
                var array = new int[] {};
var res = string.Format("{0} {1}", array); // Compliant we don't know the size of the array

              </pre>
              

              <ul>
                
  
                <li>
                   This rule doesn't check whether the format specifier (defined after the 
                  <code>
                    :
                  </code>
                  ) is actually valid. 
                </li>
                

              </ul>
              

              <h2>
                See
              </h2>
              

              <ul>
                
  
                <li>
                   
                  <a
                    href="https://wiki.sei.cmu.edu/confluence/x/J9YxBQ"
                  >
                    CERT, FIO47-C.
                  </a>
                   - Use valid format strings 
                </li>
                

              </ul>
              


            </div>
            <hr />
            <a
              href="https://github.com/SonarSource/rspec/blob/master/rules/S3457"
            >
              Edit on Github
            </a>
            <br />
            <hr />
            <pre>
              <code
                class="json hljs"
              >
                {
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "title"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "Composite format strings should be used correctly"
                    </span>
                  </span>
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "type"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "CODE_SMELL"
                    </span>
                  </span>
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "status"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "ready"
                    </span>
                  </span>
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "remediation"
                    </span>
                  </span>
                </span>
                : {
    
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "func"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "Constant/Issue"
                    </span>
                  </span>
                </span>
                ,
    
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "constantCost"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "10min"
                    </span>
                  </span>
                </span>
                
  },
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "tags"
                    </span>
                  </span>
                </span>
                : [
    
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "confusing"
                    </span>
                  </span>
                </span>
                
  ],
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "defaultQualityProfiles"
                    </span>
                  </span>
                </span>
                : [
    
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "Sonar way"
                    </span>
                  </span>
                </span>
                
  ],
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "allKeys"
                    </span>
                  </span>
                </span>
                : [
    
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "S3457"
                    </span>
                  </span>
                </span>
                
  ],
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "branch"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "master"
                    </span>
                  </span>
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "defaultSeverity"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "Major"
                    </span>
                  </span>
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "extra"
                    </span>
                  </span>
                </span>
                : {
    
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "legacyKeys"
                    </span>
                  </span>
                </span>
                : [],
    
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "replacementRules"
                    </span>
                  </span>
                </span>
                : []
  },
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "quickfix"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "unknown"
                    </span>
                  </span>
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "ruleSpecification"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "RSPEC-3457"
                    </span>
                  </span>
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "sqKey"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "S3457"
                    </span>
                  </span>
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "scope"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "All"
                    </span>
                  </span>
                </span>
                ,
  
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "languages_support"
                    </span>
                  </span>
                </span>
                : [
    {
      
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "name"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "cfamily"
                    </span>
                  </span>
                </span>
                ,
      
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "status"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "ready"
                    </span>
                  </span>
                </span>
                
    },
    {
      
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "name"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "csharp"
                    </span>
                  </span>
                </span>
                ,
      
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "status"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "ready"
                    </span>
                  </span>
                </span>
                
    },
    {
      
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "name"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "java"
                    </span>
                  </span>
                </span>
                ,
      
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "status"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "closed"
                    </span>
                  </span>
                </span>
                
    },
    {
      
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "name"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "python"
                    </span>
                  </span>
                </span>
                ,
      
                <span
                  class="hljs-attr"
                >
                  <span
                    class="hljs-attr"
                  >
                    <span
                      class="hljs-attr"
                    >
                      "status"
                    </span>
                  </span>
                </span>
                : 
                <span
                  class="hljs-string"
                >
                  <span
                    class="hljs-string"
                  >
                    <span
                      class="hljs-string"
                    >
                      "deprecated"
                    </span>
                  </span>
                </span>
                
    }
  ]
}
              </code>
            </pre>
          </div>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
